# BoredOS

./: .gitignore  AI-POLICY.md  Makefile  README.md
.github/: pull_request_template.md
docs/appdev/: custom_apps.md  libc_reference.md  syscalls.md
docs/architecture/storage/: nvme_driver.md
docs/usage/: settings.md  terminal.md
src/core/: kutils.c  main.c  man_entries.h  platform.c  version.c
src/dev/: disk.h  disk_manager.c  nvme.c  nvme.h  ps2.c
src/drivers/ACPI/: acpi.c  acpi.h  acpi_aml.c  acpi_aml.h  acpi_structures.h
src/drivers/I2C/: acpi_i2c.c  acpi_i2c.h
src/fs/: fat32.c  mkfs_fat32.c  procfs.c  shm.c  shm.h  tar.c  vfs.c  vfs.h
src/graphics/: graphics.c  graphics.h
src/input/: keyboard.c  keyboard.h  keycodes.h  keymap.c  keymap.h
src/mem/: memory_manager.c  paging.c  paging.h  vm.c
src/net/: network.c  network.h
src/sys/: elf.c  elf.h  process.c  process.h  smp.c  syscall.c  syscall.h
src/usb/: hid.c  hid.h  logitech_b110.c  logitech_b110.h  uhci.c  usb.c  usb.h
src/userland/: Makefile  crt0.asm
src/userland/cli/: boredos_install.c  df.c  help.c  loadkeys.c  rev.c  sysfetch.c  tail.c  time.c
src/userland/games/: openttd_cpp_test.cpp  openttd_test.c  tetris.c  vinyl-spinner.c
src/userland/games/openttd/upstream-15.3/src/os/boredos/: CMakeLists.txt  boredos_main.cpp
src/userland/gui/: cliptest.c  explorer.c  notepad.c  settings.c  taskman.c  terminal.c  txtedit.c
src/userland/libc/: ctype.h  cxx_runtime.cpp  errno.h  input.h  libui.c  libui.h  math.h  math_ext.c  posix_io.c  runtime.c  semaphore.c  semaphore.h  signal.h  stdint.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.h  syscall.c  syscall.h  time.h  unistd.h  wchar.h  wctype.h
src/userland/sys/: lsblk.c
src/wm/: explorer.c  graphics.c  graphics.h  gui_ipc.h  vga.c  wm.c  wm.h
tools/: build_openttd_boredos_upstream.sh  check_openttd_boredos_port.sh  fetch_external.sh  gen_userland_note.sh  openttd_https_proxy.py
(+78 files in other folders)
